test_regress/t/t_pp_resetall_bad.out
%Error: t/t_pp_resetall_bad.v:9:1: syntax error, unexpected `resetall
    9 | `resetall   
      | ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
